feature: add payment and withdrawal transactions for debit cards
